# AdventOfCode

./: .gitignore  README.md  cookie.py  getAll.sh  start.sh
2016/python/: day04.py  day05.py  day09.py  day1.py  day11.py  day13.py  day14.py  day16.py  day18.py  day2.py  day23.py  day3.py
2017/: day23.c
2017/AOC/2017/: advent-of-code.cabal  stack.yaml  test.hs
2017/AOC/2017/.stack-work/install/3573363d/flag-cache/: mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00
2017/AOC/2017/.stack-work/install/68a29f94/flag-cache/: advent-of-code-0.1.0.0  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  vector-0.12.0.1-4awQG9XUvVEBfJgKGHBhOb
2017/AOC/2017/src/: day01.hs  day02.hs  day04.hs  day05.hs
2017/AOC/day1/: day1_1.py  day1_2.py
2017/AOC/day12/: day12_1.py
2017/AOC/day13/: day13_1.py
2017/AOC/day14/: day10_1.py  day14.py
2017/AOC/day15/: day15.py  day15_2.py
2017/AOC/day16/: day16.py  day16_2.py
2017/python/: cheat.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day1.py  day10.py  day12.py  day15.py  day17.py  day19.py  day20.py  day21.py  day22.py  day24.py  day25.py
2018/haskell/: day01.hs  day1
2018/k/: day1.k
2018/python/: cheat13.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day082.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2018/rust-aoc/: Cargo.toml
2019/k/: day1.k
2019/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day21.py  day22.py  day23.py  day24.py  day25.py  intcode.py
2019/rust/: Cargo.toml
2020/data/: 19.txt
2020/python/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  19.py  20.py  21.py  22.py  25.py
2020/rust/: Cargo.toml
2021/rust/: Cargo.toml
2021/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day08.rs  day09.rs  day10.rs  day16.rs  day20.rs
2022/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
2022/rust/: Cargo.toml
2024/python/: day01.py  day02.py  day04.py  day11.py
2025/: day02.py  day03.py  day04.py  day1.py
(+28 files in other folders)
