name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
executable day2
  hs-source-dirs:      src
  main-is:             day02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
executable day4
  hs-source-dirs:      src
  main-is:             day04.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
executable day5
  hs-source-dirs:      src
  main-is:             day05.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec